@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed bug where query string wasn't preserved when you had to login and it
+tried to preserve the target destination after the login. [Michael Peters]
+
+=item *
+
 Fixed bug where some publish time exceptions were being silently
 disguarded and the user would be left with a successful message even
 though the item was never published. [Michael Peters]
